add "x-json-mask" to select specific parts of response.

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 SERVER_ADDR=127.0.0.1:8080
 REDIS_URL=127.0.0.1:6379
+LOG_LEVEL=info # debug, info, warn, error
 
-URL_GITHUB=https://github.com/ldclabs
+URL_GITHUB="https://github.com/ldclabs"
 # URL_XXX=...
