feat: add access_token verifying

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 SERVER_ADDR=127.0.0.1:8080
 REDIS_URL=127.0.0.1:6379
 LOG_LEVEL=info # debug, info, warn, error
+TOKEN_PUB_KEY="A6t1U8kc10AbLJ3-V1avU4rYvmAsYjXuzY0kPublttot"
 
 URL_GITHUB="https://github.com/ldclabs"
 # URL_XXX=...
