--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,6 @@ serde_json = "1"
 serde_bytes = "0.11"
 ciborium = "0.2"
 anyhow = "1"
-bitcoin = { version = "0.31.0" }
+k256 = { version = "0.13", features = ["ecdsa"] }
 base64 = "0.21"
 sha3 = "0.10"
