--- a/.env
+++ b/.env
@@ -1,6 +1,10 @@
 SERVER_ADDR=127.0.0.1:8080
 REDIS_URL=127.0.0.1:6379
 LOG_LEVEL=info # debug, info, warn, error
+# cert file path to enable https, for example: /etc/https/mydomain.crt
+TLS_CERT_FILE = ""
+# key file path to enable https, for example: /etc/https/mydomain.key
+TLS_KEY_FILE = ""
 # TOKEN_PUB_KEY="A6t1U8kc10AbLJ3-V1avU4rYvmAsYjXuzY0kPublttot"
 
 # URL_GITHUB="https://github.com/ldclabs"
