--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "idempotent-proxy"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
 [dependencies]
@@ -13,7 +13,8 @@ axum = { version = "0.7", features = [
   "tokio",
   "query",
 ], default-features = true }
-hyper = { version = "1.2", features = ["full"] }
+axum-server = { version = "0.6", features = ["tls-rustls"] }
+hyper = { version = "1.3", features = ["full"] }
 tokio = { version = "1", features = ["full"] }
 reqwest = { version = "0.12", features = [
   "rustls-tls",
@@ -28,7 +29,7 @@ dotenvy = "0.15"
 log = "0.4"
 structured-logger = "1"
 http = "1"
-rustis = { version = "0.12", features = ["pool"] }
+rustis = { version = "0.13", features = ["pool"] }
 bb8 = "0.8"
 async-trait = "0.1"
 serde = "1"
