--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ LOG_LEVEL=info # debug, info, warn, error
 TLS_CERT_FILE = ""
 # key file path to enable https, for example: /etc/https/mydomain.key
 TLS_KEY_FILE = ""
-# TOKEN_PUB_KEY="A6t1U8kc10AbLJ3-V1avU4rYvmAsYjXuzY0kPublttot"
+# ECDSA_PUB_KEY="A6t1U8kc10AbLJ3-V1avU4rYvmAsYjXuzY0kPublttot"
 
 # URL_GITHUB="https://github.com/ldclabs"
 # URL_XXX=...
