--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,5 +38,10 @@ serde_bytes = "0.11"
 ciborium = "0.2"
 anyhow = "1"
 k256 = { version = "0.13", features = ["ecdsa"] }
+ed25519-dalek = "2"
 base64 = "0.21"
 sha3 = "0.10"
+chrono = { version = "0.4", features = ["serde"] }
+
+[dev-dependencies]
+rand_core = "0.6"
