chore: update README; fix response headers filtering

--- a/.env
+++ b/.env
@@ -7,9 +7,12 @@ LOG_LEVEL=info # debug, info, warn, error
 TLS_CERT_FILE = ""
 # key file path to enable https, for example: /etc/https/mydomain.key
 TLS_KEY_FILE = ""
-# ECDSA_PUB_KEY="A6t1U8kc10AbLJ3-V1avU4rYvmAsYjXuzY0kPublttot"
 
-# URL_GITHUB="https://github.com/ldclabs"
+ECDSA_PUB_KEY_1="A6t1U8kc10AbLJ3-V1avU4rYvmAsYjXuzY0kPublttot"
+# ECDSA_PUB_KEY_2="xxxxxx"
+
+URL_HTTPBIN="https://httpbin.org/get?api-key=abc123"
 # URL_XXX=...
 
+HEADER_TOKEN="Bearer xyz123456"
 # HEADER_XXX=...
