feat: improve project structure

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,16 @@
-[package]
-name = "idempotent-proxy"
+[workspace]
+members = ["src/idempotent-proxy-server", "src/idempotent-proxy-types"]
+resolver = "2"
+
+[workspace.package]
 version = "0.3.0"
 edition = "2021"
+repository = "https://github.com/ldclabs/idempotent-proxy"
+keywords = ["idempotent", "reverse proxy", "icp"]
+categories = ["proxy"]
+license = "MIT OR Apache-2.0"
 
-[dependencies]
+[workspace.dependencies]
 axum = { version = "0.7", features = [
   "http1",
   "http2",
@@ -42,6 +49,3 @@ ed25519-dalek = "2"
 base64 = "0.21"
 sha3 = "0.10"
 chrono = { version = "0.4", features = ["serde"] }
-
-[dev-dependencies]
-rand_core = "0.6"
