feat: implement Cloudflare Worker

--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ TLS_CERT_FILE = ""
 # key file path to enable https, for example: /etc/https/mydomain.key
 TLS_KEY_FILE = ""
 
-# ECDSA_PUB_KEY_1="A6t1U8kc10AbLJ3-V1avU4rYvmAsYjXuzY0kPublttot"
+# ECDSA_PUB_KEY_1="A6t1U8kc10AbLJ3-V1avU4rYvmAsYjXuzY0kPublttot" # ECDSA/secp256k1
 # ECDSA_PUB_KEY_2="xxxxxx"
 
 URL_HTTPBIN="https://httpbin.org/get?api-key=abc123"
