--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 SERVER_ADDR=127.0.0.1:8080
 REDIS_URL=127.0.0.1:6379
-REDIS_POLL_INTERVAL=300 # in milliseconds
-REDIS_CACHE_TTL=30000 # in milliseconds
+POLL_INTERVAL=100 # in milliseconds
+REQUEST_TIMEOUT=10000 # in milliseconds
 LOG_LEVEL=info # debug, info, warn, error
 # cert file path to enable https, for example: /etc/https/mydomain.crt
 TLS_CERT_FILE = ""
