--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,9 @@
 [workspace]
-members = [
-  "src/idempotent-proxy-server",
-  "src/idempotent-proxy-types",
-  "src/idempotent-proxy-worker",
-]
+members = ["src/idempotent-proxy-server", "src/idempotent-proxy-types"]
 resolver = "2"
 
 [workspace.package]
-version = "0.3.0"
+version = "0.4.0"
 edition = "2021"
 repository = "https://github.com/ldclabs/idempotent-proxy"
 keywords = ["idempotent", "reverse", "proxy", "icp"]
