--- a/src/idempotent-proxy-types/Cargo.toml
+++ b/src/idempotent-proxy-types/Cargo.toml
@@ -29,3 +29,6 @@ chrono = { workspace = true }
 
 [dev-dependencies]
 rand_core = "0.6"
+hex = { package = "hex-conservative", version = "0.2", default-features = false, features = [
+  "alloc",
+] }
