feat: use agent name to separate different business processes

--- a/.env
+++ b/.env
@@ -11,6 +11,8 @@ TLS_KEY_FILE = ""
 # ECDSA_PUB_KEY_1="A6t1U8kc10AbLJ3-V1avU4rYvmAsYjXuzY0kPublttot" # ECDSA/secp256k1
 # ECDSA_PUB_KEY_2="xxxxxx"
 
+# ALLOW_AGENTS="agent1,agent2"
+
 URL_HTTPBIN="https://httpbin.org/get?api-key=abc123"
 # URL_XXX=...
 
