--- a/src/idempotent-proxy-cf-worker/wrangler.toml
+++ b/src/idempotent-proxy-cf-worker/wrangler.toml
@@ -11,6 +11,7 @@ port = 8080
 [vars]
 POLL_INTERVAL = 100     # in milliseconds
 REQUEST_TIMEOUT = 10000 # in milliseconds
+ALLOW_AGENTS = []       # Optional: List of allowed agents, ["agent1", "agent2"]
 
 # Bind a Durable Object. Durable objects are a scale-to-zero compute primitive based on the actor model.
 # Durable Objects can live for as long as needed. Use these when you need a long-running "server", such as in realtime apps.
