--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,5 +18,8 @@ jobs:
         docker buildx create --use
         docker login --username ${{ github.actor }} --password ${{ secrets.GITHUB_TOKEN }} ${{ env.REGISTRY }}
         IMAGE_TAG="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}"
+        LATEST_TAG="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest"
         TAGS="-t ${IMAGE_TAG}"
         docker buildx build --platform='linux/amd64,linux/arm64' $TAGS --push .
+        docker tag $IMAGE_TAG $LATEST_TAG
+        docker push $LATEST_TAG
