--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,3 +12,4 @@ jobs:
       with:
         registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
         ignore-unpublished-changes: true
+        args: -p idempotent-proxy-types -p idempotent-proxy-server
