--- a/src/idempotent-proxy-cf-worker/package.json
+++ b/src/idempotent-proxy-cf-worker/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "idempotent-proxy-cf-worker",
-	"version": "0.5.2",
+	"version": "0.5.4",
+	"publish": false,
 	"description": "Reverse proxy server with build-in idempotency support runing as a Cloudflare Worker.",
 	"homepage": "https://github.com/ldclabs/idempotent-proxy/tree/main/src/idempotent-proxy-cf-worker",
 	"scripts": {
