--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,7 @@
 name: Publish
 on:
   push:
-    tags:
-      - 'v*'
+    branches: [ "main" ]
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -12,9 +11,3 @@ jobs:
       with:
         registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
         ignore-unpublished-changes: true
-        args: -p idempotent-proxy-types
-    - uses: katyo/publish-crates@v2
-      with:
-        registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-        ignore-unpublished-changes: true
-        args: -p idempotent-proxy-server
