feat: add memory cacher to `idempotent-proxy-server`

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 SERVER_ADDR=127.0.0.1:8080
-REDIS_URL=127.0.0.1:6379
+# if not set, use in-memory cache
+# REDIS_URL=127.0.0.1:6379
 POLL_INTERVAL=100 # in milliseconds
 REQUEST_TIMEOUT=10000 # in milliseconds
 LOG_LEVEL=info # debug, info, warn, error
