--- a/src/idempotent-proxy-server/Cargo.toml
+++ b/src/idempotent-proxy-server/Cargo.toml
@@ -17,6 +17,7 @@ name = "idempotent-proxy-server"
 axum = { workspace = true }
 axum-server = { workspace = true }
 tokio = { workspace = true }
+futures = { workspace = true }
 reqwest = { workspace = true }
 dotenvy = { workspace = true }
 log = { workspace = true }
@@ -26,9 +27,17 @@ rustis = { workspace = true }
 bb8 = { workspace = true }
 async-trait = { workspace = true }
 serde = { workspace = true }
+serde_bytes = { workspace = true }
+serde_json = { workspace = true }
 ciborium = { workspace = true }
 anyhow = { workspace = true }
 k256 = { workspace = true }
 ed25519-dalek = { workspace = true }
 base64 = { workspace = true }
 idempotent-proxy-types = { path = "../idempotent-proxy-types", version = "1" }
+
+[dev-dependencies]
+rand_core = "0.6"
+hex = { package = "hex-conservative", version = "0.2", default-features = false, features = [
+  "alloc",
+] }
