fix: try to fix marlin enclave image building

--- a/enclave/supervisord.conf
+++ b/enclave/supervisord.conf
@@ -39,6 +39,14 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stdout
 stderr_logfile_maxbytes=0
 
+[program:idempotent-proxy-server-proxy]
+command=/app/vsock-to-ip --vsock-addr 88:1200 --ip-addr 127.0.0.1:8088
+autorestart=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stdout
+stderr_logfile_maxbytes=0
+
 # your custom programs go here
 [program:idempotent-proxy-server]
 command=/app/idempotent-proxy-server
