--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ strip = true
 opt-level = 's'
 
 [workspace.package]
-version = "1.1.3"
+version = "1.1.4"
 edition = "2021"
 repository = "https://github.com/ldclabs/idempotent-proxy"
 keywords = ["idempotent", "reverse", "proxy", "icp"]
@@ -36,13 +36,14 @@ axum-server = { version = "0.6", features = ["tls-rustls"] }
 tokio = { version = "1", features = ["full"] }
 reqwest = { version = "0.12", features = [
   "rustls-tls",
-  "rustls-tls-webpki-roots",
+  "rustls-tls-native-roots",
   "json",
   "gzip",
   "stream",
   "trust-dns",
   "http2",
-], default-features = false }
+  "hickory-dns",
+], default-features = true }
 dotenvy = "0.15"
 futures = "0.3"
 log = "0.4"
