feat: support ic-cose

--- a/src/idempotent-proxy-canister/Cargo.toml
+++ b/src/idempotent-proxy-canister/Cargo.toml
@@ -16,11 +16,6 @@ license.workspace = true
 crate-type = ["cdylib"]
 
 [dependencies]
-bytes = "1.6"
-candid = "0.10"
-ic-cdk = "0.14"
-ic-cdk-timers = "0.8"
-ic-stable-structures = "0.6"
 http = { workspace = true }
 base64 = { workspace = true }
 ciborium = { workspace = true }
@@ -29,3 +24,10 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 serde_bytes = { workspace = true }
 sha3 = { workspace = true }
+bytes = "1.6"
+candid = "0.10"
+ic-cdk = "0.14"
+ic-cdk-timers = "0.8"
+ic-stable-structures = "0.6"
+ic_cose_types = "0.1"
+getrandom = { version = "0.2", features = ["custom"] }
